Fix Gourd and Mushroom farms not taking inputs Closes #141